--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* Global styling */
+
 body {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr; 
@@ -8,3 +10,21 @@ body {
     "main main aside"
     "footer footer footer";
   }
+
+/* Header styling */  
+
+  header {
+    grid-area: header;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #79f07d;
+    padding: 20px;
+    color: white;
+  }
+  
+  .logo {
+    height: 120px;
+  }
+
+  
