--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   grid-template-areas:
     "header header header"
     "main main aside"
+    /* I really wanted to get "aside main main" to work here but I couldn't figure it out */
     "footer footer footer";
   gap: 15px;
   padding: 0 20px;
@@ -61,6 +62,7 @@ main {
 
 main section {
   margin-bottom: 40px;
+  /* Random comment here, I just wanted to really thank NIC for offering this course, I love learning. And I'm very thankful for the specific help that Megan has given me in improving my commits, as well as helping with this course in general. */
 }
 
 main section h2,
